--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2008-12-03  Alex Schroeder  <alex@gnu.org>
+
+	* modules/namespaces.pl (NewNamespaceScriptUrl): Try and handle
+	the case of namespaces containing non-ASCII characters. This
+	should be legal, but lead to problems when generating links to
+	pages in such namespaces. The URL encoding of the non-ASCII
+	characters prevented the $InterSitePattern from matching. Instead
+	of using this regular expression, we now try and guess at the
+	string using URL constraints ([^/?&;=]+), URL decoding it, and
+	then checking the $InterSitePattern.
+
 2008-12-03  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
 	* wiki.pl (PrintWikiToHTML): Moved "@MyBeforeApplyRules"-specific
@@ -41,6 +52,8 @@
 	Thanks, Alex!
 
 2008-11-24  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (DoShowVersion): Print grep --version.
 
 	* modules/google-custom-search.pl ($GoogleCustomSearchEngine): New
 	option.
