--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-17  Alex Schroeder  <alex@gnu.org>
+
+	* t/test.pl (clear_pages, add_module): Add code to make it work on
+	Windows with Cygwin.
+
 2008-12-15  Alex Schroeder  <alex@gnu.org>
 
 	* modules/static-copy.pl (ImageGetInternalUrl): Call FreeToNormal
