--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-05  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (DelayRequired): Fix an off-by one error.
+
+	* modules/big-brother.pl (AddRecentVisitor): Make sure we count
+	all the hits in the same second.
+
 2008-12-17  Alex Schroeder  <alex@gnu.org>
 
 	* modules/download.pl (DownloadSupportRule): Rewrite to fix a bug
