--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-22  Alex Schroeder  <alex@gnu.org>
+
+	* modules/page-trail.pl (NewPageTrailBrowsePage): Handle more
+	parameters.
+	(UpdatePageTrail): Just use whitespace to separate the page names.
+
 2009-01-14  Alex Schroeder  <alex@gnu.org>
 
 	* modules/google-custom-search.pl (NewGoogleCustomGetSearchLink):
