--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2009-02-11 Weakish Jiang <weakish@gmail.com>
+	* modules/creoleaddition.pl (CreoleAdditionRule): Allow URLs in dt in dl.
+
 2009-01-22  Alex Schroeder  <alex@gnu.org>
 
 	* modules/page-trail.pl (NewPageTrailBrowsePage): Handle more
