--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-27  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creoleaddition.pl ($CreoleAdditionIndentedParagraphs):
+	New option.
+	(CreoleAdditionRule): Implement indented paragraphs rule.
+
 2009-02-22  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (GetParam): Get result from NewCookie before getting it
