*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,7 @@
 2009-03-27  Alex Schroeder  <alex@gnu.org>
 
-	* wiki.pl (GrepFiltered): Use find and grep because on larger
-	wikis the command line is too large.
-	(DoShowVersion): Print find version as well.
+	* wiki.pl (GrepFiltered): Use grep -r because on larger wikis the
+	command line is too large.
 
 2009-03-22  Alex Schroeder  <alex@gnu.org>
 
