--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 	* wiki.pl (DoHistory): Handle date changes here in order to avoid
 	declaring a variable and having to pass it by reference to
 	GetHistoryLine.
-	(GetHistoryLine): Simplified.
+	(GetHistoryLine): Simplified. Also, don't set a revision if
+	comparing an older revision with the current one.
 
 2009-05-07  Alex Schroeder  <alex@gnu.org>
 
